# moos-map

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md  validation.md
src/moos_map/: __init__.py  acquisition.py  cache.py  cli.py  errors.py  geocoding.py  geometry.py  models.py  moos_compat.py  moos_files.py  raster.py  service.py  sources.py  verification.py  web.py
src/moos_map/static/: app.js  index.html  styles.css
tests/: conftest.py  test_acquisition.py  test_cli.py  test_geocoding.py  test_geometry.py  test_info.py  test_moos_compat.py  test_service.py  test_sources.py  test_web.py
